# flin-imgbb-mcp

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  prd.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: index.ts
src/flin_imgbb_mcp/: __init__.py  server.py
tests/: test_server.py
