[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flin-imgbb-mcp"
version = "1.0.2"
description = "MCP server for uploading images to ImgBB"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "flin-agency" }]
keywords = ["mcp", "imgbb", "image-upload", "claude", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/flin-agency/flin-imgbb-mcp"
Repository = "https://github.com/flin-agency/flin-imgbb-mcp"
Issues = "https://github.com/flin-agency/flin-imgbb-mcp/issues"

[project.scripts]
flin-imgbb-mcp = "flin_imgbb_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flin_imgbb_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
